@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-12T16:42:56Z",
+  "timestamp" : "2022-10-13T02:14:26Z",
   "count_outdated" : 178,
   "uniques_outdated" : 52,
-  "count" : 194,
+  "count" : 195,
   "uniques" : 62,
   "clones" : [
     {
@@ -70,8 +70,8 @@
     },
     {
       "timestamp": "2022-10-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
