@@ -1,3 +1,11 @@
+2022-10-13T02:14:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3239207504 # 130
+* notice: last 14d: unq all: 2 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 52 178 / 62 194
+* notice: next accum: outdated-unq outdated-all / unq all: 52 178 / 62 195
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-12]
+
 2022-10-12T16:42:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3236396808 # 129
 * notice: last 14d: unq all: 2 16
